--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
 <!-- slide of restaurent -->
 
-<center>
+<!-- <center>
 <nav height="50%" class="slide_picture">
     <table   cellspacing="5" cellpadding="2" height="50" class="img_slider">
         <tr><th>
@@ -318,7 +318,7 @@
         </th></tr>
     </table>
 </nav>
-</center>
+</center> -->
 
 <!--  menu items  -->
 
