--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     </nav>
 </section>
 <section class="video">
-    <video width="100%" height="" muted autoplay loop>
+<!--     <video width="100%" height="" muted autoplay loop>
         <source src="img/New video.mp4" scrollamount="5" controls="false">
-    </video>
+    </video> -->
+	<img src="img/insta-4.jpg">
     <div class="text-box">
        <center><h1 id="text6-container"></h1></center>
     </div>
