--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!--     <video width="100%" height="" muted autoplay loop>
         <source src="img/New video.mp4" scrollamount="5" controls="false">
     </video> -->
-	<img src="img/insta-4.jpg">
+	<img src="img/insta-4.jpg" width="100%">
     <div class="text-box">
        <center><h1 id="text6-container"></h1></center>
     </div>
