--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
                     <li><a href="#">copyright claim 2023,Sahin Nayak</a></li>
   	 			</ul>
   	 		</div>
-  	 		<div class="footer-col">
+<!--   	 		<div class="footer-col">
   	 			<h4>follow us</h4>
   	 			<div class="social-links">
   	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1373,7 +1373,7 @@
   	 				<a href="#"><i class="fab fa-instagram"></i></a>
   	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
   	 			</div>
-  	 		</div>
+  	 		</div> -->
   	 	</div>
   	 </div>
 </footer>
